--- a/public/css/style.css
+++ b/public/css/style.css
@@ -176,6 +176,7 @@ hr {
   border-radius: 25px;
   transition: all 0.5s linear;
   border: 0;
+  width: 200px;
 }
 .btn-custom:hover,
 .btn-custom:focus,
@@ -217,11 +218,13 @@ a:focus,
 }
 .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
+  padding: 100px 0;
+  height: 600px;
 }
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
-  font-size: 82px;
+  font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
   margin-top: 0;
@@ -240,13 +243,13 @@ a:focus,
   margin-bottom: 60px;
 }
 header .intro-text {
-  padding-top: 350px;
-  padding-bottom: 200px;
-  text-align: center;
+  margin: 0 auto;
+  text-align: left;
 }
 /* Features Section */
 #features {
   background: #f6f6f6;
+  padding: 50px 0;
 }
 #features i.fa {
   font-size: 38px;
@@ -345,7 +348,7 @@ header .intro-text {
   color: #fff;
 }
 #services p {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 1);
 }
 #services .service-desc {
   margin-bottom: 40px;
@@ -459,9 +462,8 @@ header .intro-text {
 }
 /* Contact Section */
 #contact {
-  padding: 100px 0 60px;
-  background: linear-gradient(to right, #6372ff 0%, #5ca9fb 100%);
-  color: rgba(255, 255, 255, 0.75);
+  background: linear-gradient(to right, #717ced 0%, #85bbf4 100%);
+  color: rgba(255, 255, 255,1);
 }
 #contact .section-title {
   margin-bottom: 40px;
@@ -560,9 +562,11 @@ label {
   margin-right: 10px;
 }
 #contact .social {
-  border-top: 1px solid rgba(255, 255, 255, 0.15);
-  padding-top: 50px;
-  margin-top: 50px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+  padding: 30px 0;
+ 
   text-align: center;
 }
 #contact .social ul li {
