--- a/public/css/style.css
+++ b/public/css/style.css
@@ -462,8 +462,8 @@ header .intro-text {
 }
 /* Contact Section */
 #contact {
-  background: linear-gradient(to right, #717ced 0%, #85bbf4 100%);
-  color: rgba(255, 255, 255,1);
+  background: #fff;
+  color: #000;
 }
 #contact .section-title {
   margin-bottom: 40px;
@@ -565,9 +565,8 @@ label {
 display: flex;
 justify-content: space-between;
 align-items: center;
-  padding: 30px 0;
- 
-  text-align: center;
+padding: 15px 0;
+text-align: center;
 }
 #contact .social ul li {
   display: inline-block;
@@ -578,8 +577,8 @@ align-items: center;
   width: 48px;
   height: 48px;
   padding: 12px 0;
-  border: 2px solid #fff;
-  color: #fff;
+  border: 2px solid #000;
+  color: #000;
   border-radius: 50%;
   transition: all 0.3s;
 }
